<resources>
    <string name="app_name">RejestrDlugow</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginGet">LogIn!</string>
    <string name="App">Welcome in debt register! This app is made by group of students from Politechnika Krakowska named Dziki z Politechniki! To use Rejestr Dzików account is necessary! </string>
    <string name="LoginStatus">Login Status</string>
    <string name="LoginRole">Login Role</string>
    <string name="Status">Not login</string>
    <string name="Role">Not assigned</string>
    <string name="Register">I don\'t have an account. Sign up!</string>
    <string name="method">Login Method</string>
    <string name="Choose">Choose Method</string>
    <string name="FgPass">I don\'t remember password</string>
    <string name="DebtMenu">Debt</string>
    <string name="GroupMenu">Group</string>
    <string name="UserMenu">User</string>
    <string name="NewGroup">Add Group</string>
    <string name="JoinGroup">Join Group</string>
    <string name="title_activity_register_tabbed">RegisterActivityTabbed</string>
    <string name="tab_text_1">Debt</string>
    <string name="tab_text_2">Group</string>
    <string name="tab_text_3">User</string>
    <string name="title_activity_register_activity">register_activity</string>
    <string name="title_activity_registeringactivity">registeringactivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="ok_button">Confirm</string>
    <string name="Cancel_button">Cancel</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to Myacoount -->
    <string name="set_login"></string>
    <string name="ch_log">Change Login</string>
    <string name="ch_pass">Change Password</string>
    <string name="del_button">Delete My Account</string>
    <string name="accept_but">Accept Changes</string>


    <!-- Strings related to password reminder -->
    <string name="input_mail">Write an e-mail</string>
    <string name="input_mail_conf">Confirm e-mail</string>
    <string name="res_pass">Reset password!</string>

</resources>
