<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:inputType="textPassword"></EditText>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignStart="@+id/editText2"
        android:layout_marginBottom="16dp"
        android:ems="10">

    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText1"
        android:layout_alignBottom="@+id/editText1"
        android:layout_alignEnd="@+id/textView2"
        android:text="@string/Username" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/App"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="?attr/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:text="@string/FgPass"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="15sp" />

    <Button
        android:id="@+id/debt"
        android:layout_width="300sp"
        android:layout_height="110sp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:onClick="login"
        android:text="@string/LoginGet"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText2"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="39dp"
        android:text="@string/Password" />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/debt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:onClick="register"
        android:text="Sign Up!" />

</RelativeLayout>